// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterMiddleDesktop component renders correctly 1`] = `
<Fragment>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={0}
      headerAsImage={true}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={1}
      headerAsImage={true}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={2}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={3}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={4}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={5}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <OpenLoginModal
    data={
      Object {
        "buttons": Object {
          "cancel": "labels.common.lbl_common_dontDelete",
          "confirm": "labels.common.lbl_common_YesDelete",
        },
        "description": "selectedAddress",
        "heading": "labels.addressBook.ACC_LBL_DELETE_ADDRESS_HEADING",
        "title": "labels.addressBook.ACC_LBL_DELETE_ADDRESS_TITLE",
      }
    }
  />
</Fragment>
`;

exports[`FooterMiddleDesktop component renders correctly 2`] = `
<Fragment>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={0}
      headerAsImage={true}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={1}
      headerAsImage={true}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    className="divider"
    colSize={
      Object {
        "large": 1,
        "medium": 8,
        "small": 6,
      }
    }
  />
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={2}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={3}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
    <FooterNavLinks
      className="footer-links"
      colNum={4}
      isSubHeader={true}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={5}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
    />
  </Styled(Col)>
  <OpenLoginModal
    data={
      Object {
        "buttons": Object {
          "cancel": "labels.common.lbl_common_dontDelete",
          "confirm": "labels.common.lbl_common_YesDelete",
        },
        "description": "selectedAddress",
        "heading": "labels.addressBook.ACC_LBL_DELETE_ADDRESS_HEADING",
        "title": "labels.addressBook.ACC_LBL_DELETE_ADDRESS_TITLE",
      }
    }
  />
</Fragment>
`;
